--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ body {
   padding: 0;
   margin: 0;
   background: #fff;
+  font-family: Helvetica, Arial, sans-serif;
+  color: #323232;
+  position: relative;
 }
 #main-header {
   position: fixed;
@@ -370,6 +373,9 @@ body {
   bottom: 20px;
   width: 100%;
 }
+#slider li {
+  position: relative;
+}
 #slider .first-slide .slider-content-wrap {
   position: absolute;
   width: 100%;
@@ -398,8 +404,97 @@ body {
   padding: 20px;
 }
 #slider .first-slide .slider-content-wrap .slider-content p {
-  height: 80px;
   padding: 30px;
+}
+#slider .first-slide .slider-content-wrap .slider-content button {
+  background: none;
+  position: relative;
+  border: 1px solid #fff;
+  padding: 10px 26px 10px 10px;
+  color: #fff;
+  text-transform: uppercase;
+}
+#slider .first-slide .slider-content-wrap .slider-content button:after {
+  content: '';
+  position: absolute;
+  top: 13px;
+  right: 10px;
+  background: url('../img/icons-sprite.png') no-repeat -87px -54px;
+  width: 10px;
+  height: 8px;
+}
+#slider .first-slide .slider-content-wrap .slider-content button:hover,
+#slider .first-slide .slider-content-wrap .slider-content button:active {
+  border-color: #00e1f5;
+  background: #00e1f5;
+  color: #000;
+}
+#slider .first-slide .slider-content-wrap .slider-content button:hover:after,
+#slider .first-slide .slider-content-wrap .slider-content button:active:after {
+  background-position: -87px -85px;
+}
+#slider .second-slide .slider-content-wrap {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+#slider .second-slide .slider-content-wrap .slider-content {
+  width: 386px;
+  margin-left: -193px;
+  top: 45%;
+  position: absolute;
+  left: 50%;
+  height: 50%;
+}
+#slider .second-slide .slider-content-wrap .slider-content p {
+  padding: 20px;
+  background: rgba(255, 255, 255, 0.9);
+  position: absolute;
+  bottom: 20px;
+}
+#slider .second-slide .slider-content-wrap .slider-content button {
+  background: #00e1f5;
+  border: none;
+  margin: 0 auto;
+  width: 66px;
+  height: 42px;
+  border-radius: 7px;
+  position: relative;
+  display: block;
+}
+#slider .second-slide .slider-content-wrap .slider-content button:after {
+  content: '';
+  position: absolute;
+  top: 12px;
+  left: 28px;
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 14px solid #000;
+}
+#slider .second-slide .slider-content-wrap .youtube-video {
+  display: none;
+}
+#slider .second-slide.play .slider-content-wrap .youtube-video {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+}
+#slider .second-slide.play .slider-content-wrap .youtube-video iframe,
+#slider .second-slide.play .slider-content-wrap .youtube-video object,
+#slider .second-slide.play .slider-content-wrap .youtube-video embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 main,
 #main-footer {
@@ -411,6 +506,97 @@ main,
   #main-footer {
     width: 100%;
   }
+}
+main .featured-posts {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  padding: 20px 0;
+}
+main .featured-posts article {
+  -webkit-flex: 0 0 386px;
+  -ms-flex: 0 0 386px;
+  flex: 0 0 386px;
+  height: 390px;
+}
+main .featured-posts label {
+  font-size: 13px;
+  text-transform: uppercase;
+  color: #969696;
+  display: block;
+  padding: 10px 0;
+}
+main .featured-posts h2 {
+  font-size: 17px;
+  text-transform: uppercase;
+  color: #323232;
+  padding-bottom: 10px;
+}
+main .featured-posts p {
+  font-size: 15px;
+  color: #969696;
+  line-height: 20px;
+}
+main .featured-posts .read-more {
+  text-decoration: none;
+  color: #00e1f5;
+  display: inline-block;
+  padding-right: 20px;
+  position: relative;
+}
+main .featured-posts .read-more:after {
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 6px;
+  background: url('../img/icons-sprite.png') no-repeat -85px -69px;
+  width: 12px;
+  height: 9px;
+}
+main .products {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  padding: 20px 0;
+}
+main .products article {
+  -webkit-flex: 0 0 224px;
+  -ms-flex: 0 0 224px;
+  flex: 0 0 224px;
+  height: 280px;
+  font-size: 14px;
+  color: #000;
+}
+main .products article > div {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  padding: 5px 0;
+}
+main .products article > div div {
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+}
+main .products .price {
+  font-size: 14px;
+  color: #969696;
+  display: block;
+}
+main .products p {
+  line-height: 20px;
 }
 #main-footer,
 #site-info {
@@ -425,13 +611,213 @@ main,
 .user-logged .non-logged-users {
   display: none;
 }
+#main-footer {
+  position: relative;
+}
+#main-footer .footer-row {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-justify-content: center;
+  justify-content: center;
+  padding: 20px 0;
+}
+#main-footer .footer-row:first-child {
+  margin-top: 30px;
+}
+#main-footer .footer-row:nth-of-type(2) {
+  padding-bottom: 60px;
+}
+#social-links {
+  margin-right: 40px;
+  padding-top: 10px;
+}
+#social-links a {
+  display: inline-block;
+  margin: 0 15px;
+}
+#social-links .facebook {
+  background: url('../img/icons-sprite.png') no-repeat -211px 0;
+  width: 11px;
+  height: 22px;
+}
+#social-links .facebook:hover {
+  background-position: -211px -25px;
+}
+#social-links .twitter {
+  background: url('../img/icons-sprite.png') no-repeat -105px 0;
+  width: 23px;
+  height: 18px;
+  position: relative;
+  top: -2px;
+}
+#social-links .twitter:hover {
+  background-position: -106px -25px;
+}
+#social-links .instagram {
+  background: url('../img/icons-sprite.png') no-repeat -141px 0;
+  width: 20px;
+  height: 20px;
+}
+#social-links .instagram:hover {
+  background-position: -141px -24px;
+}
+#social-links .pinterest {
+  background: url('../img/icons-sprite.png') no-repeat -70px 0;
+  width: 23px;
+  height: 22px;
+}
+#social-links .pinterest:hover {
+  background-position: -68px -25px;
+}
+#social-links .tumblr {
+  background: url('../img/icons-sprite.png') no-repeat -246px 0;
+  width: 12px;
+  height: 22px;
+}
+#social-links .tumblr:hover {
+  background-position: -246px -24px;
+}
+#social-links .no-idea {
+  background: url('../img/icons-sprite.png') no-repeat -35px 0;
+  width: 29px;
+  height: 16px;
+  position: relative;
+  top: -2px;
+  margin: 0 0 0 10px;
+}
+#social-links .no-idea:hover {
+  background-position: -33px -27px;
+}
+#social-links .i-think-its-blogger {
+  background: url('../img/icons-sprite.png') no-repeat -176px 0;
+  width: 18px;
+  height: 22px;
+}
+#social-links .i-think-its-blogger:hover {
+  background-position: -177px -25px;
+}
+#newsletter-sign-up {
+  border: 1px solid #000;
+  color: #000;
+  padding: 10px 70px 10px 15px;
+  position: relative;
+  font-size: 17px;
+  cursor: pointer;
+}
+#newsletter-sign-up:after {
+  content: '';
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  background: url('../img/icons-sprite.png') no-repeat -106px -58px;
+  width: 18px;
+  height: 16px;
+}
+#footer-menu a {
+  display: inline-block;
+  padding: 0 30px;
+  text-decoration: none;
+  color: #323232;
+  font-size: 14px;
+}
+#footer-menu a:hover {
+  text-decoration: underline;
+}
 #choose-currency input {
   display: none;
+}
+#choose-currency label {
+  display: inline-block;
+  padding: 0 5px;
+  color: #afafaf;
+  border-right: 1px solid #afafaf;
+  box-shadow: 1px 0 #ebebeb;
+}
+#choose-currency label:nth-of-type(3) {
+  border-right: none;
+  box-shadow: none;
 }
 #gbp:checked ~ label[for="gbp"],
 #usd:checked ~ label[for="usd"],
 #euro:checked ~ label[for="euro"] {
-  color: black;
+  color: #323232;
   text-decoration: underline;
+}
+#site-info ul {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-justify-content: center;
+  justify-content: center;
+  padding: 40px 0 60px 0;
+}
+#site-info li {
+  display: inline-block;
+  padding: 0 5px;
+  border-right: 1px solid #b2b2b2;
+  color: #b2b2b2;
+}
+#site-info li:last-child {
+  border-right: none;
+}
+#site-info li a {
+  color: #b2b2b2;
+  text-decoration: none;
+}
+#site-info li a:hover {
+  text-decoration: underline;
+}
+#footer-promotion {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-justify-content: center;
+  justify-content: center;
+  padding: 10px 0;
+  background: #fff;
+}
+#footer-promotion div {
+  display: inline-block;
+  padding: 0 5px;
+  border-right: 1px solid #323232;
+  color: #323232;
+  font-size: 10px;
+  text-transform: uppercase;
+}
+#footer-promotion div:last-child,
+#footer-promotion div:nth-of-type(3) {
+  border-right: none;
+}
+#footer-promotion .close-footer-promotion {
+  display: block;
+  position: fixed;
+  right: 20px;
+  cursor: pointer;
+  padding-right: 20px;
+  color: #b2b2b2;
+}
+#footer-promotion .close-footer-promotion:after {
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: url('../img/icons-sprite.png') no-repeat -133px -54px;
+  width: 8px;
+  height: 8px;
+}
+#footer-promotion .close-footer-promotion:hover {
+  color: #00e1f5;
+}
+#footer-promotion .close-footer-promotion:hover:after {
+  background-position: -133px -69px;
+  width: 8px;
 }
 /*# sourceMappingURL=style.css.map */
