--- a/css/style.less
+++ b/css/style.less
@@ -10,6 +10,9 @@ body {
     padding: 0;
     margin: 0;
     background: #fff;
+    font-family: Helvetica, Arial, sans-serif;
+    color: #323232;
+    position: relative;
 }
 
 //Header
@@ -418,43 +421,160 @@ body {
     .csSlideOuter {
         position: relative;
     }
-    .csPager  {
+
+    .csPager {
         position: absolute;
         bottom: 20px;
         width: 100%;
     }
 
     li {
-        
+        position: relative;
     }
+
     .first-slide .slider-content-wrap {
         position: absolute;
         width: 100%;
         top: 20%;
         left: 0;
+
         .slider-content {
             width: 1200px;
             margin: 0 auto;
+
             > div {
                 width: 386px;
                 text-align: center;
                 color: #fff;
+
                 a {
                     color: #fff;
                 }
             }
+
             h3 {
                 text-transform: uppercase;
                 font-size: 15px;
             }
+
             h2 {
                 text-transform: uppercase;
                 font-size: 48px;
                 padding: 20px;
             }
+
             p {
-                height: 80px;
                 padding: 30px;
+            }
+
+            button {
+                background: none;
+                position: relative;
+                border: 1px solid #fff;
+                padding: 10px 26px 10px 10px;
+                color: #fff;
+                text-transform: uppercase;
+
+                &:after {
+                    content: '';
+                    position: absolute;
+                    top: 13px;
+                    right: 10px;
+                    background: url('../img/icons-sprite.png') no-repeat -87px -54px;
+                    width: 10px;
+                    height: 8px;
+                }
+
+                &:hover, &:active {
+                    border-color: #00e1f5;
+                    background: #00e1f5;
+                    color: #000;
+
+                    &:after {
+                        background-position: -87px -85px;
+                    }
+                }
+            }
+        }
+    }
+
+    .second-slide {
+
+        .slider-content-wrap {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+
+            .slider-content {
+                width: 386px;
+                margin-left: -193px;
+                top: 45%;
+                position: absolute;
+                left: 50%;
+                height: 50%;
+
+                p {
+                    padding: 20px;
+                    background: rgba(255, 255, 255, 0.9);
+                    position: absolute;
+                    bottom: 20px;
+                }
+
+                button {
+                    background: #00e1f5;
+                    border: none;
+                    margin: 0 auto;
+                    width: 66px;
+                    height: 42px;
+                    border-radius: 7px;
+                    position: relative;
+                    display: block;
+
+                    &:after {
+                        content: '';
+                        position: absolute;
+                        top: 12px;
+                        left: 28px;
+                        width: 0;
+                        height: 0;
+                        border-top: 10px solid transparent;
+                        border-bottom: 10px solid transparent;
+                        border-left: 14px solid #000;
+                    }
+
+                    &:hover, &:active {
+
+                        &:after {
+                        }
+                    }
+                }
+            }
+
+            .youtube-video {
+                display: none;
+            }
+
+        }
+        
+        &.play {
+            .slider-content-wrap .youtube-video {
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: #000;
+
+                iframe, object, embed  {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                }
             }
         }
     }
@@ -467,6 +587,104 @@ main, #main-footer {
 @media all and (max-width: 1200px) {
     main, #main-footer  {
         width: 100%;
+    }
+}
+
+main {
+    .featured-posts {
+        display: -webkit-flex;
+        display: flex;
+        -webkit-flex-flow: row wrap;
+        -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
+        -webkit-justify-content: space-between;
+        justify-content: space-between;
+        padding: 20px 0;
+
+        article {
+            -webkit-flex: 0 0 386px;
+            -ms-flex: 0 0 386px;
+            flex: 0 0 386px;
+            height: 390px;
+        }
+
+        label {
+            font-size: 13px;
+            text-transform: uppercase;
+            color: #969696;
+            display: block;
+            padding: 10px 0;
+        }
+        h2 {
+            font-size: 17px;
+            text-transform: uppercase;
+            color: #323232;
+            padding-bottom: 10px;
+        }
+        p {
+            font-size: 15px;
+            color: #969696;
+            line-height: 20px;
+        }
+        .read-more {
+            text-decoration: none;
+            color: #00e1f5;
+            display: inline-block;
+            padding-right: 20px;
+            position: relative;
+            &:after {
+                content: '';
+                position: absolute;
+                right: 0;
+                top: 6px;
+                background: url('../img/icons-sprite.png') no-repeat -85px -69px; 
+                width: 12px; 
+                height: 9px;
+            }
+        }
+    }
+    .products {
+        display: -webkit-flex;
+        display: flex;
+        -webkit-flex-flow: row wrap;
+        -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
+        -webkit-justify-content: space-between;
+        justify-content: space-between;
+        padding: 20px 0;
+
+        article {
+            -webkit-flex: 0 0 224px;
+            -ms-flex: 0 0 224px;
+            flex: 0 0 224px;
+            height: 280px;
+            font-size: 14px;
+            color: #000;
+            > div {
+                display: -webkit-flex;
+                display: flex;
+                -webkit-flex-flow: row wrap;
+                -ms-flex-flow: row wrap;
+                flex-flow: row wrap;
+                -webkit-justify-content: space-between;
+                justify-content: space-between;
+                padding: 5px 0;
+                div {
+                    -webkit-flex: 0 0 auto;
+                    -ms-flex: 0 0 auto;
+                    flex: 0 0 auto;
+                }
+            }
+        }
+
+        .price {
+            font-size: 14px;
+            color: #969696;
+            display: block;
+        }
+        p {
+            line-height: 20px;
+        }
     }
 }
 
@@ -489,14 +707,225 @@ main, #main-footer {
 }
 
 //Footer
+#main-footer {
+    position: relative;
+    .footer-row { 
+        display: -webkit-flex; 
+        display: flex; 
+        -webkit-flex-flow: row wrap; 
+        flex-flow: row wrap; 
+        -webkit-justify-content: center; 
+        justify-content:center;
+        padding: 20px 0;
+        &:first-child {
+            margin-top: 30px;
+        }
+        &:nth-of-type(2) {
+            padding-bottom: 60px;
+        }
+    }
+}
+
+#social-links {
+    margin-right: 40px;
+    padding-top: 10px;
+    a {
+        display: inline-block;
+        margin: 0 15px;
+    }
+    .facebook {
+        background: url('../img/icons-sprite.png') no-repeat -211px 0; 
+        width: 11px; 
+        height: 22px;
+        &:hover {
+            background-position: -211px -25px;
+        }
+    }
+    .twitter {
+        background: url('../img/icons-sprite.png') no-repeat -105px 0; 
+        width: 23px; 
+        height: 18px;
+        position: relative;
+        top: -2px;
+        &:hover {
+            background-position: -106px -25px;
+        }
+    }
+    .instagram {
+        background: url('../img/icons-sprite.png') no-repeat -141px 0; 
+        width: 20px; 
+        height: 20px;
+        &:hover {
+            background-position: -141px -24px;
+        }
+    }
+    .pinterest {
+        background: url('../img/icons-sprite.png') no-repeat -70px 0; 
+        width: 23px; 
+        height: 22px;
+        &:hover {
+            background-position: -68px -25px;
+        }
+    }
+    .tumblr {
+        background: url('../img/icons-sprite.png') no-repeat -246px 0; 
+        width: 12px; 
+        height: 22px; 
+        &:hover {
+            background-position: -246px -24px;
+        }
+    }
+    .no-idea {
+        background: url('../img/icons-sprite.png') no-repeat -35px 0; 
+        width: 29px; 
+        height: 16px;
+        position: relative;
+        top: -2px;
+        margin: 0 0 0 10px; 
+        &:hover {
+            background-position: -33px -27px;
+        }
+    }
+    .i-think-its-blogger {
+	    background: url('../img/icons-sprite.png') no-repeat -176px 0; 
+        width: 18px; 
+        height: 22px;
+        &:hover {
+            background-position: -177px -25px;
+        }
+    }
+}
+
+#newsletter-sign-up {
+    border: 1px solid #000;
+    color: #000;
+    padding: 10px 70px 10px 15px;
+    position: relative;
+    font-size: 17px;
+    cursor: pointer;
+    &:after {
+        content: '';
+        position: absolute;
+        right: 15px;
+        top: 10px;
+        background: url('../img/icons-sprite.png') no-repeat -106px -58px; 
+        width: 18px; 
+        height: 16px; 
+    }
+}
+
+#footer-menu {
+    a {
+        display: inline-block;
+        padding: 0 30px;
+        text-decoration: none;
+        color: #323232;
+        font-size: 14px;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
+
 #choose-currency {
 
     input {
         display: none;
     }
+    label {
+        display: inline-block;
+        padding: 0 5px;
+        color: #afafaf;
+        border-right: 1px solid #afafaf;
+        box-shadow: 1px 0 #ebebeb; 
+        &:nth-of-type(3) {
+            border-right: none;
+            box-shadow: none;
+        }
+
+    }
 }
 
 #gbp:checked ~ label[for="gbp"], #usd:checked ~ label[for="usd"], #euro:checked ~ label[for="euro"] {
-        color: black;
+        color: #323232;
         text-decoration: underline;
     }
+
+
+#site-info {
+    ul {
+        display: -webkit-flex; 
+        display: flex; 
+        -webkit-flex-flow: row wrap; 
+        flex-flow: row wrap; 
+        -webkit-justify-content: center; 
+        justify-content:center;
+        padding: 40px 0 60px 0;
+    }
+    li {
+        display: inline-block;
+        padding: 0 5px;
+        border-right: 1px solid #b2b2b2;
+        color: #b2b2b2;
+        &:last-child {
+            border-right: none;
+        }
+        a {
+            color: #b2b2b2;
+            text-decoration: none;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+}
+
+#footer-promotion {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    display: -webkit-flex; 
+    display: flex; 
+    -webkit-flex-flow: row wrap; 
+    flex-flow: row wrap; 
+    -webkit-justify-content: center; 
+    justify-content:center;
+    padding: 10px 0;
+    background: #fff;
+    div {
+        display: inline-block;
+        padding: 0 5px;
+        border-right: 1px solid #323232;
+        color: #323232;
+        font-size: 10px;
+        text-transform: uppercase;
+        &:last-child, &:nth-of-type(3) {
+            border-right: none;
+        }
+    }
+    .close-footer-promotion {
+        display: block;
+        position: fixed;
+        right: 20px;
+        cursor: pointer;
+        padding-right: 20px;
+        color: #b2b2b2;
+        &:after {
+            content: '';
+            position: absolute;
+            right: 0;
+            top: 0;
+            background: url('../img/icons-sprite.png') no-repeat -133px -54px; 
+            width: 8px; 
+            height: 8px;
+        }
+        &:hover {
+            color: #00e1f5;
+            &:after {
+                background-position: -133px -69px; 
+                width: 8px; 
+            }
+        }
+    }
+}
